--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
-    "@vue/cli-service": "^5.0.8"
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/cli-service": "^5.0.8",
+    "vite": "^7.0.6"
   }
 }
